--- a/src/app/manufaturer-hub-stock/manufaturer-hub-stock.component.html
+++ b/src/app/manufaturer-hub-stock/manufaturer-hub-stock.component.html
@@ -52,8 +52,9 @@
       </p>
 
       <div class="row justify-content-end">
-        <div class="col-1 mt-4">
-          <button id="button1" routerLink="/manufacturer" class="btn btn-outline-primary">Back</button>
+        <div id="buttonRow">
+          <button id="button1"routerLink="/manufacturer/new-car" class="btn btn-outline-success">Register Vehicle</button>
+          <button id="button2" routerLink="/manufacturer" class="btn btn-outline-primary">Back</button>
         </div>
       </div>
     </div>
