--- a/src/app/manufaturer-hub-sell-car/manufaturer-hub-sell-car.component.html
+++ b/src/app/manufaturer-hub-sell-car/manufaturer-hub-sell-car.component.html
@@ -37,7 +37,7 @@
             placeholder="Price">
         </div>
         <div id="buttonRow">
-          <button id="button1" (click)="sellVehicle()" class="btn btn-primary">Submit</button>
+          <button id="button1" (click)="sellVehicle()" class="btn btn-primary" [disabled]="!userID">Submit</button>
           <button id="button2" routerLink="/manufacturer/stock" class="btn btn-outline-primary">Back</button>
         </div>
       </form>
